chore(directories): Updated directories

--- a/public/style.css
+++ b/public/style.css
@@ -22,3 +22,15 @@ span {
 img {
     width: 200px;
 }
+
+/*
+In the shadows where secrets lie,
+HTTP verbs and hackers try.
+With lowercase words and underscores,
+Form paths that open hidden doors.
+
+Mix methods with terms so sly,
+Create your list, give it a try.
+Craft it well with thought and care,
+And hidden routes will soon be there.
+*/
